@@ -66,7 +66,7 @@ ifneq ($(CROSSCOMPILING), 1)
 else
 	rm -rf $(BUILDDIR)/sdcc/doc/*
 	mkdir -p $(BUILDDIR)/sdcc/doc
-	cp -p $(TOPDIR)/support/readme-snapshot.txt $(BUILDDIR)/sdcc/doc/README.TXT
+	cp -p $(TOPDIR)/support/readme-snapshot.txt $(BUILDDIR)/sdcc/doc/README.TXT$(MAKE) -C src/sdcc/support/regression SDCC_HOME=$(BUILDDIR) SDCC_EXTRA_DIR=$(SRCDIR)/sdcc-extra $(REGTESTTARGETS) 2>&1 | tee $(REGTESTLOG)
 	head -n 100 $(ORIGDIR)/sdcc/ChangeLog > $(BUILDDIR)/sdcc/doc/ChangeLog_head.txt
 	cp $(BUILDDIR)/sdcc/doc/ChangeLog_head.txt $(CHLOGTXT)
 endif
@@ -85,9 +85,19 @@ sdcc-device-clean:
 
 sdcc-regression: sdcc sdcc-install sdcc-extra
 # test-gbz80 temporary disabled because of problems; Bernhard 2003-02-13
-ifneq ($(CROSSCOMPILING), 1)
-	mkdir -p $(REGTESTDIR)
+ifeq ($(CROSSCOMPILING), 1)
+	# uninstall the previous version
+	wine sdcc --version > /dev/null 2>&1 && wine 'c:/Program Files/SDCC/uninstall' /S
+	# install sdcc package
+	wine $(SETUPNAME) /S
+	# perform regression tests
+	if wine sdcc --version > /dev/null 2>&1; \
+	then \
+	  mkdir -p $(REGTESTDIR); \
+	  $(MAKE) -C src/sdcc/support/regression SDCC_HOME=$(BUILDDIR) SDCC_EXTRA_DIR=$(SRCDIR)/sdcc-extra $(REGTESTTARGETS) SDCC="wine sdcc" 2>&1 | tee $(REGTESTLOG); \
+	fi
+else
+	# perform regression tests
+	mkdir -p $(REGTESTDIR); \
 	$(MAKE) -C src/sdcc/support/regression SDCC_HOME=$(BUILDDIR) SDCC_EXTRA_DIR=$(SRCDIR)/sdcc-extra $(REGTESTTARGETS) 2>&1 | tee $(REGTESTLOG)
-endif
-
 endif
