@@ -1,3 +1,8 @@
+2010-06-26 Borut Razem <borut.razem AT siol.net>
+
+	* components/sdcc.mk:
+	  WIN32 regression tests with wine on mingw cross-compiled sdcc
+
 2010-04-13 Borut Razem <borut.razem AT siol.net>
 
 	* sdcc-build-bootstrap.sh:
